Intrgrate API for product and suggessions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <pets-loader></pets-loader>
-<app-navbar (onLanguagechange)="onLanguageValueReceived($event)"></app-navbar>
-<app-bottombar [language]="changesLanguage"></app-bottombar>
+<!-- <app-navbar (onLanguagechange)="onLanguageValueReceived($event)"></app-navbar>
+<app-bottombar [language]="changesLanguage"></app-bottombar> -->
+<router-outlet></router-outlet>
