--- a/src/app/bottombar/bottombar.component.html
+++ b/src/app/bottombar/bottombar.component.html
@@ -27,7 +27,7 @@
 <div class="bottomBar text-center">
   <div class="row">
     <div class="col-4">
-      <a routerLink="main">
+      <a routerLink="">
         <div class="icon"><i class="fa-solid fa-house"></i></div>
         <div class="text">메인</div>
       </a>
