--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -84,4 +84,38 @@
       </div>
     </div>
   </div>
+  <div class="suggessions">
+    <div class="suggessionsBox">
+      <div class="boxTitle">
+        <p class="font-weight-bold">이 회원님의 게시글 (12)</p>
+      </div>
+      <div class="viewMore">
+        <p>더보기</p>
+      </div>
+    </div>
+    <div class="suggessionCard">
+      <div class="row">
+        <div class="col-6">
+          <img src="./assets/product_profile.png" alt="" class="w-100" />
+          <div class="desc">고양이 용품 판매합니다. 모…</div>
+          <div class="price">50,000원</div>
+        </div>
+        <div class="col-6">
+          <img src="./assets/product_profile.png" alt="" class="w-100" />
+          <div class="desc">고양이 용품 판매합니다. 모…</div>
+          <div class="price">50,000원</div>
+        </div>
+        <div class="col-6">
+          <img src="./assets/product_profile.png" alt="" class="w-100" />
+          <div class="desc">고양이 용품 판매합니다. 모…</div>
+          <div class="price">50,000원</div>
+        </div>
+        <div class="col-6">
+          <img src="./assets/product_profile.png" alt="" class="w-100" />
+          <div class="desc">고양이 용품 판매합니다. 모…</div>
+          <div class="price">50,000원</div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
