--- a/src/app/profile/edit-profile/edit-profile.component.html
+++ b/src/app/profile/edit-profile/edit-profile.component.html
@@ -1,8 +1,10 @@
 <div class="container">
   <div class="row backward">
     <div class="col-12 p-3">
-      <span><i class="fa-solid fa-angle-left"></i></span>
-      <span class="font-weight-bold ml-3">{{ ChangeProfile }}</span>
+      <a routerLink="">
+        <span><i class="fa-solid fa-angle-left"></i></span>
+        <span class="font-weight-bold ml-3">{{ ChangeProfile }}</span>
+      </a>
     </div>
   </div>
   <div class="row profile">
