--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,16 +1,16 @@
 <div class="navigation">
   <div class="user">
-    <div>
-      <span class="userIcon">
-        <img src="./assets/user-avatar-filled.svg" alt="" />
-      </span>
-      <span class="userName"> 앱활동 </span>
-    </div>
-    <div>
-      <span
-        ><a routerLink="editProfile"><i class="fa-solid fa-angle-right"></i></a
-      ></span>
-    </div>
+    <a routerLink="editProfile">
+      <div>
+        <span class="userIcon">
+          <img src="./assets/user-avatar-filled.svg" alt="" />
+        </span>
+        <span class="userName"> 앱활동 </span>
+      </div>
+      <div>
+        <span><i class="fa-solid fa-angle-right"></i></span>
+      </div>
+    </a>
   </div>
   <ul>
     <div class="subCatgory">
