Work on Api integration of profile image and product post API

--- a/src/app/modules/edit-profile/edit-profile.component.html
+++ b/src/app/modules/edit-profile/edit-profile.component.html
@@ -24,7 +24,7 @@
     </div>
     <div class="col-12">
       <div class="profileNmae p-2">
-        <span><input type="text" /></span>
+        <span><input type="text" [(ngModel)]="userName" /></span>
       </div>
     </div>
     <div class="col-12 p-3">
