--- a/src/app/modules/main/main.component.html
+++ b/src/app/modules/main/main.component.html
@@ -1,4 +1,4 @@
-<app-navbar (onLanguagechange)="onLanguageValueReceived($event)"></app-navbar>
+<app-navbar></app-navbar>
 
 <div class="container">
   <div class="row product" *ngFor="let content of fetchedContents">
@@ -122,4 +122,4 @@
     </div>
   </div> -->
 </div>
-<app-bottombar [language]="changesLanguage"></app-bottombar>
+<app-bottombar></app-bottombar>
