--- a/src/app/modules/write-post/write-dogpost/write-dogpost.component.scss
+++ b/src/app/modules/write-post/write-dogpost/write-dogpost.component.scss
@@ -31,3 +31,12 @@
   @include flex;
   justify-content: center;
 }
+
+.imgContainer {
+  @include flex;
+  overflow-x: scroll;
+  img {
+    width: 60px;
+    height: 60px;
+  }
+}
