work on profile image and product post API integration

--- a/src/app/modules/edit-profile/edit-profile.component.html
+++ b/src/app/modules/edit-profile/edit-profile.component.html
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div class="col-12 p-3">
-      <button class="btn btn-purple-filled" (click)="onProfileChange()">
+      <button class="btn btn-purple-filled" (click)="onChangeProfile()">
         저장
       </button>
     </div>
