--- a/src/app/modules/write-post/write-dogpost/write-dogpost.component.html
+++ b/src/app/modules/write-post/write-dogpost/write-dogpost.component.html
@@ -62,6 +62,7 @@
                 value=""
                 [(ngModel)]="message"
               ></textarea>
+              {{ message }}
             </div>
           </div>
         </div>
