--- a/src/app/shared/components/bottombar/bottombar.component.html
+++ b/src/app/shared/components/bottombar/bottombar.component.html
@@ -26,21 +26,19 @@
     <div class="col-4">
       <a routerLink="">
         <div class="icon"><i class="fa-solid fa-house"></i></div>
-        <div class="text">{{ language === "ko" ? "메인" : "Main" }}</div>
+        <div class="text">Main</div>
       </a>
     </div>
     <div class="col-4">
       <a routerLink="community">
         <div class="icon"><i class="fa-solid fa-file-lines"></i></div>
-        <div class="text">{{ language === "ko" ? "게시판" : "Community" }}</div>
+        <div class="text">Community</div>
       </a>
     </div>
     <div class="col-4">
       <a routerLink="mypage">
         <div class="icon"><i class="fa-solid fa-user"></i></div>
-        <div class="text">
-          {{ language === "ko" ? "마이페이지" : "My page" }}
-        </div>
+        <div class="text">My page</div>
       </a>
     </div>
   </div>
