--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -53,8 +53,8 @@
 >
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
-      <div class="titleConainer p-4">
-        <h5 class="modal-title">Change Language</h5>
+      <div class="titleConainer px-3 pt-3">
+        <h5 class="modal-title">{{ "navbar.title" | translate }}</h5>
         <button
           type="button"
           class="close"
