--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -14,14 +14,14 @@
   </div>
   <ul>
     <div class="subCatgory">
-      <span>앱활동</span>
+      <span>{{ "sidebar.subCatgory1" | translate }}</span>
     </div>
     <li>
       <a href="#">
         <span class="icon">
           <i class="fa-regular fa-heart"></i>
         </span>
-        <span class="title"> 관심목록 </span>
+        <span class="title"> {{ "sidebar.item1" | translate }} </span>
       </a>
     </li>
     <li>
@@ -29,18 +29,18 @@
         <span class="icon">
           <i class="fa-solid fa-pen"></i>
         </span>
-        <span class="title"> 내가 작성한 게시글 </span>
+        <span class="title">{{ "sidebar.item2" | translate }}</span>
       </a>
     </li>
     <div class="subCatgory">
-      <span>고객센터</span>
+      <span>{{ "sidebar.subCatgory2" | translate }}</span>
     </div>
     <li>
       <a href="#">
         <span class="icon">
           <i class="fa-regular fa-circle-question"></i>
         </span>
-        <span class="title"> 1:1 문의 </span>
+        <span class="title"> {{ "sidebar.item3" | translate }} </span>
       </a>
     </li>
     <li>
@@ -52,14 +52,14 @@
       </a>
     </li>
     <div class="subCatgory">
-      <span>앱정보</span>
+      <span>{{ "sidebar.subCatgory3" | translate }}</span>
     </div>
     <li>
       <a href="#">
         <span class="icon">
           <i class="fa-solid fa-bullhorn"></i>
         </span>
-        <span class="title"> 공지사항 </span>
+        <span class="title"> {{ "sidebar.item4" | translate }} </span>
       </a>
     </li>
     <li>
@@ -67,7 +67,7 @@
         <span class="icon">
           <i class="fa-solid fa-pen"></i>
         </span>
-        <span class="title"> 이용약관 </span>
+        <span class="title"> {{ "sidebar.item5" | translate }} </span>
       </a>
     </li>
     <li>
@@ -75,7 +75,7 @@
         <span class="icon">
           <i class="fa-solid fa-shield"></i>
         </span>
-        <span class="title"> 개인정보처리방침 </span>
+        <span class="title"> {{ "sidebar.item6" | translate }} </span>
       </a>
     </li>
     <li>
@@ -83,7 +83,7 @@
         <span class="icon">
           <i class="fa-solid fa-circle-info"></i>
         </span>
-        <span class="title"> 버전 </span>
+        <span class="title"> {{ "sidebar.item7" | translate }} </span>
       </a>
     </li>
   </ul>
