--- a/src/app/modules/main/write-post/write-dogpost/write-dogpost.component.html
+++ b/src/app/modules/main/write-post/write-dogpost/write-dogpost.component.html
@@ -20,7 +20,7 @@
   </div>
   <div class="row">
     <div class="col-12">
-      <form #usersForm="ngForm" (ngSubmit)="getUserFormData(usersForm.value)">
+      <form #usersForm="ngForm">
         <div class="container">
           <div class="row">
             <div class="col-12 mt-3">
